update about section

--- a/index.html
+++ b/index.html
@@ -169,13 +169,16 @@
                   <div class="p-5">
                     <h2 class="mb-5">Hi! I'm Olivia Helmuth</h2>
                     <p class="custom-color-text">
-                      I'm a motivated Junior Web Developer. Based on my
-                      experience in Tech Support, I'm able to communicate with
-                      customers in easy terms and produce quick and efficient
-                      solutions suitable for their needs. I'm mainly experienced
-                      in Frontend solutions, but I'm also constantly improving
-                      my Backend skills, to enhance the functionalities of my
-                      projects.
+                      Hello, my name is Olivia and I am a motivated Junior Web
+                      Developer and Tech Supporter. Based on my experience in
+                      Tech Support, I am able to communicate with customers in
+                      easy terms and produce quick and efficient solutions
+                      suitable for their needs. As for my Tech Support skills, I
+                      am able to work with Linux, databases, log data and
+                      efficiently troubleshoot the cause of the problem. In Web
+                      Development, I am mainly experienced in Frontend
+                      solutions, but I'm also constantly improving my Backend
+                      skills to enhance the functionalities of my projects.
                     </p>
                     <ul class="ftco-footer-social list-unstyled mt-4">
                       <li>
